<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Prosim</class>
 <widget class="QMainWindow" name="Prosim">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1000</width>
    <height>700</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>1000</width>
    <height>700</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>1000</width>
    <height>700</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Prosim</string>
  </property>
  <property name="toolButtonStyle">
   <enum>Qt::ToolButtonIconOnly</enum>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
      <x>1</x>
      <y>2</y>
      <width>997</width>
      <height>584</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>791</width>
       <height>581</height>
      </rect>
     </property>
     <property name="midLineWidth">
      <number>11</number>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="0">
       <widget class="QGraphicsView" name="processGraph">
        <property name="mouseTracking">
         <bool>true</bool>
        </property>
        <property name="verticalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QGraphicsView" name="memoryGraph">
        <property name="mouseTracking">
         <bool>true</bool>
        </property>
        <property name="verticalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>780</x>
       <y>0</y>
       <width>215</width>
       <height>581</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QPlainTextEdit" name="outputTextArea">
        <property name="undoRedoEnabled">
         <bool>false</bool>
        </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
   <widget class="QFrame" name="frame_2">
    <property name="geometry">
     <rect>
      <x>1</x>
      <y>588</y>
      <width>690</width>
      <height>111</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>110</x>
       <y>0</y>
       <width>161</width>
       <height>111</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="3" column="0">
       <widget class="QSpinBox" name="expirySpinBox"/>
      </item>
      <item row="1" column="0">
       <widget class="QComboBox" name="algorithmModes">
        <item>
         <property name="text">
          <string>FCFS</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>RR</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>SRT</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>SPN</string>
         </property>
        </item>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QSpinBox" name="quantumSpinBox"/>
      </item>
     </layout>
    </widget>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>0</y>
       <width>101</width>
       <height>111</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_4">
      <item row="0" column="0">
       <widget class="QLabel" name="algorithmLabel">
        <property name="text">
         <string>Algorithm</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="expiryLabel">
        <property name="text">
         <string>Expiry</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="quantumLabel">
        <property name="text">
         <string>Quantum</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>500</x>
       <y>-1</y>
       <width>191</width>
       <height>111</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_5">
      <item row="1" column="0">
       <widget class="QComboBox" name="simulationModes">
        <item>
         <property name="text">
          <string>Scheduler</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Virtual Memory</string>
         </property>
        </item>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLineEdit" name="inputFileTextBox"/>
      </item>
      <item row="2" column="1">
       <widget class="QToolButton" name="inputFileDialogue">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
    <widget class="QFrame" name="gridFrame">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>0</y>
       <width>141</width>
       <height>111</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_6">
      <item row="0" column="0">
       <widget class="QLabel" name="simulationModeLabel">
        <property name="text">
         <string>Simulation Mode</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="inputFileLabel">
        <property name="text">
         <string>Input File</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
   <widget class="QFrame" name="horizontalFrame">
    <property name="geometry">
     <rect>
      <x>700</x>
      <y>600</y>
      <width>291</width>
      <height>91</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="resetButton">
       <property name="text">
        <string>Reset</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="runButton">
       <property name="text">
        <string>Run</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
